[project]
name = "onboarding-assistant"
version = "0.1.0"
description = "Onboarding assistant chat app"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "langgraph-checkpoint-redis>=0.1.3",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "redisvl>=0.18.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
